public class Allocation {

    private String id;
    private String quantity;
    private String allocatedFrom;
    private String allocatedTo;

    public void allocate() {
        // TODO: implement
    }

    public void release() {
        // TODO: implement
    }

}