public class Client {

    private String id;
    private String name;
    private String contactInfo;

    public void createContract(contract: Contract) {
        // TODO: implement
    }

    public void getProjectList() {
        // TODO: implement
    }

}