public class Company {

    private String id;
    private String name;
    private String address;

    public void addDepartment(dept: Department) {
        // TODO: implement
    }

    public void getDepartments() {
        // TODO: implement
    }

    public void updateCompanyInfo() {
        // TODO: implement
    }

}