public class Contract {

    private String id;
    private String contractNumber;
    private String value;
    private String startDate;
    private String endDate;

    public void signContract() {
        // TODO: implement
    }

    public void renewContract() {
        // TODO: implement
    }

    public void terminateContract() {
        // TODO: implement
    }

}