public class Department {

    private String id;
    private String name;

    public void addEmployee(emp: Employee) {
        // TODO: implement
    }

    public void getEmployeeList() {
        // TODO: implement
    }

}