public class Employee {

    private String id;
    private String firstName;
    private String lastName;
    private String email;
    private String phone;

    public void login() {
        // TODO: implement
    }

    public void assignTask(task: Task) {
        // TODO: implement
    }

    public void submitTimesheet(hours: Float) {
        // TODO: implement
    }

    public void viewAssignedProjects() {
        // TODO: implement
    }

}