public class Invoice {

    private String id;
    private String number;
    private String amount;
    private String status;

    public void generateInvoice() {
        // TODO: implement
    }

    public void markAsPaid() {
        // TODO: implement
    }

    public void cancelInvoice() {
        // TODO: implement
    }

}