public class Milestone {

    private String id;
    private String title;
    private String dueDate;

    public void markAsCompleted() {
        // TODO: implement
    }

    public void updateDueDate(newDate: String) {
        // TODO: implement
    }

}