public class Notification {

    private String id;
    private String message;
    private String sentAt;
    private String read;

    public void send() {
        // TODO: implement
    }

    public void markAsRead() {
        // TODO: implement
    }

}