public class Payment {

    private String id;
    private String paymentDate;
    private String amount;
    private String method;

    public void processPayment() {
        // TODO: implement
    }

    public void refund() {
        // TODO: implement
    }

}