public class Project {

    private String id;
    private String name;
    private String startDate;
    private String endDate;
    private String status;

    public void createProject() {
        // TODO: implement
    }

    public void updateProject() {
        // TODO: implement
    }

    public void deleteProject() {
        // TODO: implement
    }

    public void assignTask(task: Task) {
        // TODO: implement
    }

    public void generateReport() {
        // TODO: implement
    }

}