public class Report {

    private String id;
    private String type;
    private String generatedAt;

    public void generate() {
        // TODO: implement
    }

    public void exportToPDF() {
        // TODO: implement
    }

}