public class Resource {

    private String id;
    private String type;
    private String name;
    private String spec;

    public void allocateToProject(project: Project) {
        // TODO: implement
    }

    public void releaseResource() {
        // TODO: implement
    }

}