public class Role {

    private String id;
    private String name;
    private String permissions;

    public void assignPermission(permission: String) {
        // TODO: implement
    }

    public void revokePermission(permission: String) {
        // TODO: implement
    }

}