public class Task {

    private String id;
    private String title;
    private String description;
    private String status;
    private String priority;

    public void startTask() {
        // TODO: implement
    }

    public void completeTask() {
        // TODO: implement
    }

    public void assignEmployee(emp: Employee) {
        // TODO: implement
    }

    public void updateStatus(status: String) {
        // TODO: implement
    }

}