public class Timesheet {

    private String id;
    private String date;
    private String hours;
    private String description;

    public void submit() {
        // TODO: implement
    }

    public void editEntry() {
        // TODO: implement
    }

    public void approve() {
        // TODO: implement
    }

}