public class UserAccount {

    private String username;
    private String passwordHash;
    private String lastLogin;

    public void authenticate(password: String) {
        // TODO: implement
    }

    public void updatePassword(newPassword: String) {
        // TODO: implement
    }

    public void logout() {
        // TODO: implement
    }

}